@@ -1,3 +1,13 @@
+2006-01-29  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Darin.
+        
+        - properly define Vector assignment operator; the private version was accidentally left
+        in, and the template version is not enough to replace the default
+
+        * kxmlcore/Vector.h:
+        (KXMLCore::Vector::operator=):
+
 2006-01-29  Eric Seidel  <eseidel@apple.com>
 
         Reviewed by darin.
